Change log

1.44

Modern g++ seems to dislike *printf without a constant format string if there
are no other aguuments and was causing compiles to fail.  Fixed warning and patch from Tobias Quathamer.

Manpage spelling fix from Tobias Quathamer.

John Heidemann pointed out that plot doesn't accept modifiers to strings
(though he didn't phrase it that way).  The short form is that 

plot bullet at x,y

wasn't working.  I've adjusted plot to make the string modifiers into 
active keywords, which fixes the problem.

Someone named Y T pointed out that there was no mod operator (%).  There
is now.

This marks the transition from my home brewed Makefiles to automake-generated
makefiles.  A couple largely unused options went away, but with any luck
we still build everywhere.  

1.43

Bruce Lilly pointed out that g++ 4.3.1 was emitting all sorts of dire
warnings about the hash_map data structure and associated support being
pulled from g++ in the future.  SuSe seems to ship with this and there's
no point scaring people (or letting a time bomb tick).  Grap now detects
and uses unordered_map if it's present on your system, which stops the
wailing and gnashing of teeth from g++ 4.3.1 .  That g++ version also
requires a compiler option to support that include file, which we also
autodetect and use.  (This is essentially autodetecting the flags described in
the changes to grap 1.41 below, along with some code changes to make that
actually function correctly.)

A fellow named Fergus had a Cygwin compilation problem as well.  His
system apparently had rand but not random (a very rare configuration
these days).  This led me to find a corner of the autoconf code that I
apparently hadn't checked sufficiently.  If rand was found and a
declaration made in the system files, the grap config stuff failed to
note the declaration and made its own incompatible one.  This should be
gone now.

Fergus's system also seemed to be lacking snprintf - which again is very